...
            color = MaterialTheme.colorScheme.onSurfaceVariant,
            maxLines = if (showAllText) Int.MAX_VALUE else 2,
            overflow = if (showAllText) TextOverflow.Clip else TextOverflow.Ellipsis,
        )
        if (opera.isFavorite) {
            Text(
                text = "已收藏",
                style = MaterialTheme.typography.labelMedium,
                color = MaterialTheme.colorScheme.primary,
                fontWeight = FontWeight.Bold,
            )
        }
    }
...
